chapter-3/networkisolation/web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: secondary
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: nginx
    ports:
    - containerPort: 80
      protocol: TCP
