chapter-3/networkisolation/block-other-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: secondary                         #A
  name: block-other-namespace
spec:
  podSelector: {}                              #B
  ingress:
  - from:
    - podSelector: {}                 #C
